# tiralabra

./: README.md  main.py  pyproject.toml
documents/: specdoc.md
documents/weeklyreports/: week1.md  week2.md
