[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Riitta Pessi <riitta@pessi.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.1"
numpy = "^1.26.4"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
